EES-6568 - Add `legendItems` class with flex-wrap and gap styles to fix 400% zoom scrollable regions DAC issue.

--- a/src/explore-education-statistics-admin/src/pages/release/datablocks/components/chart/ChartLegendConfiguration.module.scss
+++ b/src/explore-education-statistics-admin/src/pages/release/datablocks/components/chart/ChartLegendConfiguration.module.scss
@@ -48,3 +48,8 @@
     width: 100px;
   }
 }
+
+.legendItems {
+  flex-wrap: wrap;
+  gap: 10px;
+}
